# window_manager

./: CMakeLists.txt  README.md  cursor.cc  cursor.h  display_manager.cc  display_manager.h  event_loop.h  input_manager.cc  input_manager.h  main.cc  server.cc  server.h  session.cc  session.h
client/: CMakeLists.txt  client.cc  client.h  main.cc
client/graphic/: CMakeLists.txt  canvas.cc  canvas.cc~  canvas.h  canvas.h~
client/view/: widget.h
drm/: CMakeLists.txt  drm_setting.cc  drm_setting.h  kms.c  kms.h
message/: message.h
